--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Portfolio</title>
+    <style>
+      body {
+        background-color: #030303;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <p>This is my FP.</p>
