--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Лиза какашка</title>
+    <title>portfolio</title>
     <style>
       body {
         background-color: #030303;
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-    <p>This is my FP.</p>
+    <p>лиза покнула</p>
   </body>
 </html>
