--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>portfolio</title>
+    <title>Daria Perserpov</title>
     <style>
       body {
         background-color: #030303;
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-    <p>лиза покает</p>
+    <p>так жить нельзя</p>
   </body>
 </html>
