--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header class="header">
     <div class="header-content">
-      <h1>Персерпов</h1>
-      <p>Сайт</p>
+      <h1>Daria Perserpov</h1>
+      <p>portfolio</p>
     </div>
   </header>
 </body>
