--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="header-content">
       <h1>Daria Perserpov</h1>
-      <p>portfolio</p>
+      <h2>PORTFOLIO</h2>
     </div>
   </header>
 </body>
