--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header Example</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&family=Cormorant+SC:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
   <header class="header">
     <div class="header-content">
       <h1>Daria Perserpov</h1>
-      <h2>PORTFOLIO</h2>
+      <h2>portfolio</h2> 
     </div>
   </header>
 </body>
